re-design Pre.jsx component

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "#src/*": {
       "default": "./src/*"
     },
+    "#html/*": {
+      "default": "./src/html/*"
+    },
     "#tool/*": {
       "default": "./src/components/tool/*"
     }
